LIKA-357: Fixed text-overflow for attachment-lists links

--- a/ckanext/ckanext-apicatalog_ui/less/dataset.less
+++ b/ckanext/ckanext-apicatalog_ui/less/dataset.less
@@ -314,5 +314,14 @@
         background: rgb(240, 246, 255)
       }
     }
+
+    .attachments-list {
+      .nav-item {
+        a {
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
   }
 }
